--- a/style.css
+++ b/style.css
@@ -92,7 +92,14 @@ h3 {
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+.skills{
+  display: flex;
+  flex-direction: column;
+  font-size: smaller;
+  align-items: center;
   margin: 2rem;
+  font-size: 14px;
 }
 .icones {
   margin-top: 1rem;
@@ -102,7 +109,7 @@ h3 {
 }
 .icons {
   width: 50px;
-  margin: 1rem;
+  margin-bottom: 8px;
   
 }
 
